bug(responsive-ui): Stack up content on small screens
- make content not overflow page boundaries on small screens
[fixes #159214078]

--- a/UI/styles/main.css
+++ b/UI/styles/main.css
@@ -106,4 +106,9 @@ button{
         line-height: 1.5;
         font-size: medium;
     }
+
+    .row{
+        flex-direction: column;
+    }
+    
 }
